--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <svg id ="eraser" class="icon" aria-hidden="true">
             <use xlink:href="#icon-eraser1"></use>
         </svg>
+        <svg id ="clear" class="icon clear" aria-hidden="true">
+            <use xlink:href="#icon-Clear"></use>
+        </svg>
+        <svg id ="download" class="icon" aria-hidden="true">
+            <use xlink:href="#icon-save"></use>
+        </svg>
     </div>
     <ol class="colors">
         <li id="black" class="black active"></li>
@@ -26,8 +32,12 @@
         <li id="blue" class="blue"></li>            
         <li id="green" class="green"></li>
     </ol>
+    <ol class="size">
+        <li id="thin" class="thin active"></li>
+        <li id="thick" class="thick"></li>
+    </ol>
 </body>
 <script src="./main.js"></script>
-<script src="//at.alicdn.com/t/font_1228455_wgx01myrkfd.js"></script>
+<script src="//at.alicdn.com/t/font_1228455_9wb5h2rt0oa.js"></script>
 
 </html>
